--- a/.github/workflows/validate-code.yml
+++ b/.github/workflows/validate-code.yml
@@ -22,4 +22,4 @@ jobs:
       run: npm install
 
     - name: Validate HTML and CSS
-      run: npx html-validate "../../*.html" "../../assets/css/*.css"
+      run: npx html-validate "*.html" "assets/css/*.css"
