--- a/.github/workflows/validate-code.yml
+++ b/.github/workflows/validate-code.yml
@@ -1,4 +1,12 @@
-- name: HTML5 Validator
-  uses: Cyb3r-Jak3/html5validator-action@master
-  with:
-    root: ./
+name: Validate Code
+on: [push]
+
+jobs:
+  validate:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: HTML5 Validator
+        uses: Cyb3r-Jak3/html5validator-action@master
+        with:
+          root: ./
