--- a/.github/workflows/validate-code.yml
+++ b/.github/workflows/validate-code.yml
@@ -6,7 +6,11 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - name: Checkout repository
+        uses: actions/checkout@v2
       - name: HTML5 Validator
         uses: Cyb3r-Jak3/html5validator-action@master
         with:
           root: ./
+          log_level: WARNING
+          skip_git_check: false  # Assurez-vous que ce paramètre est défini sur false
