--- a/.github/workflows/validate-code.yml
+++ b/.github/workflows/validate-code.yml
@@ -14,4 +14,5 @@ jobs:
           root: ./
           log_level: WARNING
           skip_git_check: false
-          blacklist: ../../pages/*
+          css: true
+          blacklist: ./pages/*
