--- a/.github/workflows/validate-code.yml
+++ b/.github/workflows/validate-code.yml
@@ -12,7 +12,5 @@ jobs:
         uses: Cyb3r-Jak3/html5validator-action@master
         with:
           root: ./
-          log_level: WARNING
+          blacklist: pages
           skip_git_check: false
-          css: true
-          blacklist: ./pages/*
